fix: add unremoved-classname to body for overflow control in layout

--- a/src/app/(page)/globals.css
+++ b/src/app/(page)/globals.css
@@ -6,6 +6,11 @@
   font-family: Arial, Helvetica, sans-serif;
 } */
 
+body.unremoved-classname,
+body.unremoved-classname[data-scroll-locked] {
+  overflow: clip !important;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
